--- a/app/index.html
+++ b/app/index.html
@@ -11,23 +11,49 @@
 
 <body>
 
-  <header>
-    header
+  <header class="header">
+    <div class="container">
+      <nav class="menu">
+        <a class="logo menu__logo" href="index.html">
+          <img class="logo__img" src="images/logo.svg" alt="logo">
+        </a>
+        <button class="menu__btn btn" type="button">
+          Order a consultation
+        </button>
+        <button class="menu__burger" type="button">
+          <span class="sr-only">open menu</span>
+        </button>
+      </nav>
+    </div>
   </header>
 
-  <main>
-    main
-  </main>
+<main>
+  main
+</main>
 
-  <footer>
+<footer class="footer">
 
-    footer
+  <div class="container">
 
-  </footer>
+    <div class="footer__inner">
+
+      <h2 class="footer__title">
 
 
 
-  <script src="js/main.min.js"></script>
+      </h2>
+
+      <a class="footer__logo" href="index.html"></a>
+
+    </div>
+
+  </div>
+
+</footer>
+
+
+
+<script src="js/main.min.js"></script>
 
 </body>
 
