--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -97,121 +97,186 @@
         <div class="projects__slider swiper">
           <div class="swiper-wrapper">
             <div class="projects__slide swiper-slide">
-              <h3 class="projects__title title">
-                Your home
-                is your place of power
-              </h3>
-              <div class="projects__box">
-                <div class="projects__content">
-                  <h4 class="projects__head">
-                    Two-bedroom apartment
-                  </h4>
-                  <p class="projects__text">
-                    Our latest project showcases a cozy two-bedroom apartment where modern style meets functionality.
-                    We've crafted a space
-                    that reflects the client's individuality, incorporating contemporary design trends. The combination
-                    of stylish
-                    furniture, warm tones, and intelligent solutions makes this apartment comfortable and inspiring. The
-                    project embodies
-                    our design principles: attention to detail, functionality, and aesthetics. The result is a perfect
-                    living space that
-                    expresses the client's personal style.
-                  </p>
-                  <ul class="projects__list">
-                    <li class="projects__item">
-                      100 m2
-                    </li>
-                    <li class="projects__item">
-                      2 weeks
-                    </li>
-                    <li class="projects__item">
-                      young
-                      family
-                    </li>
-                  </ul>
+              <div class="projects__slide-inner">
+                <h3 class="projects__title title">
+                  Your home <br>
+                  is your place of power
+                </h3>
+                <div class="projects__box">
+                  <div class="projects__content">
+                    <h4 class="projects__head">
+                      One-bedroom apartment
+                    </h4>
+                    <p class="projects__text">
+                      Our latest project showcases a cozy two-bedroom apartment where modern style meets functionality.
+                      We've crafted a space
+                      that reflects the client's individuality, incorporating contemporary design trends. The
+                      combination
+                      of stylish
+                      furniture, warm tones, and intelligent solutions makes this apartment comfortable and inspiring.
+                      The
+                      project embodies
+                      our design principles: attention to detail, functionality, and aesthetics. The result is a perfect
+                      living space that
+                      expresses the client's personal style.
+                    </p>
+                    <ul class="projects__list">
+                      <li class="projects__item">
+                        100 m<sup>2</sup>
+                      </li>
+                      <li class="projects__item">
+                        2 weeks
+                      </li>
+                      <li class="projects__item">
+                        <span>
+                          young
+                          family
+                        </span>
+                      </li>
+                    </ul>
+                  </div>
+                  <img class="projects__img" src="images/slide.webp" alt="Two-bedroom apartment">
                 </div>
-                <img class="projects__img" src="images/slide.webp" alt="Two-bedroom apartment">
               </div>
             </div>
             <div class="projects__slide swiper-slide">
-              <h3 class="projects__title title">
-                Your home
-                is your place of power
-              </h3>
-              <div class="projects__box">
-                <div class="projects__content">
-                  <h4 class="projects__head">
-                    Two-bedroom apartment
-                  </h4>
-                  <p class="projects__text">
-                    Our latest project showcases a cozy two-bedroom apartment where modern style meets functionality.
-                    We've crafted a space
-                    that reflects the client's individuality, incorporating contemporary design trends. The combination
-                    of stylish
-                    furniture, warm tones, and intelligent solutions makes this apartment comfortable and inspiring. The
-                    project embodies
-                    our design principles: attention to detail, functionality, and aesthetics. The result is a perfect
-                    living space that
-                    expresses the client's personal style.
-                  </p>
-                  <ul class="projects__list">
-                    <li class="projects__item">
-                      100 m2
-                    </li>
-                    <li class="projects__item">
-                      2 weeks
-                    </li>
-                    <li class="projects__item">
-                      young
-                      family
-                    </li>
-                  </ul>
+              <div class="projects__slide-inner">
+                <h3 class="projects__title title">
+                  Your home <br>
+                  is your place of power
+                </h3>
+                <div class="projects__box">
+                  <div class="projects__content">
+                    <h4 class="projects__head">
+                      Two-bedroom apartment
+                    </h4>
+                    <p class="projects__text">
+                      Our latest project showcases a cozy two-bedroom apartment where modern style meets functionality.
+                      We've crafted a space
+                      that reflects the client's individuality, incorporating contemporary design trends. The
+                      combination
+                      of stylish
+                      furniture, warm tones, and intelligent solutions makes this apartment comfortable and inspiring.
+                      The
+                      project embodies
+                      our design principles: attention to detail, functionality, and aesthetics. The result is a perfect
+                      living space that
+                      expresses the client's personal style.
+                    </p>
+                    <ul class="projects__list">
+                      <li class="projects__item">
+                        100 m<sup>2</sup>
+                      </li>
+                      <li class="projects__item">
+                        2 weeks
+                      </li>
+                      <li class="projects__item">
+                        <span>
+                          young
+                          family
+                        </span>
+                      </li>
+                    </ul>
+                  </div>
+                  <img class="projects__img" src="images/slide.webp" alt="Two-bedroom apartment">
                 </div>
-                <img class="projects__img" src="images/slide.webp" alt="Two-bedroom apartment">
               </div>
             </div>
             <div class="projects__slide swiper-slide">
-              <h3 class="projects__title title">
-                Your home
-                is your place of power
-              </h3>
-              <div class="projects__box">
-                <div class="projects__content">
-                  <h4 class="projects__head">
-                    Two-bedroom apartment
-                  </h4>
-                  <p class="projects__text">
-                    Our latest project showcases a cozy two-bedroom apartment where modern style meets functionality.
-                    We've crafted a space
-                    that reflects the client's individuality, incorporating contemporary design trends. The combination
-                    of stylish
-                    furniture, warm tones, and intelligent solutions makes this apartment comfortable and inspiring. The
-                    project embodies
-                    our design principles: attention to detail, functionality, and aesthetics. The result is a perfect
-                    living space that
-                    expresses the client's personal style.
-                  </p>
-                  <ul class="projects__list">
-                    <li class="projects__item">
-                      100 m2
-                    </li>
-                    <li class="projects__item">
-                      2 weeks
-                    </li>
-                    <li class="projects__item">
-                      young
-                      family
-                    </li>
-                  </ul>
+              <div class="projects__slide-inner">
+                <h3 class="projects__title title">
+                  Your home <br>
+                  is your place of power
+                </h3>
+                <div class="projects__box">
+                  <div class="projects__content">
+                    <h4 class="projects__head">
+                      Three-bedroom apartment
+                    </h4>
+                    <p class="projects__text">
+                      Our latest project showcases a cozy two-bedroom apartment where modern style meets functionality.
+                      We've crafted a space
+                      that reflects the client's individuality, incorporating contemporary design trends. The
+                      combination
+                      of stylish
+                      furniture, warm tones, and intelligent solutions makes this apartment comfortable and inspiring.
+                      The
+                      project embodies
+                      our design principles: attention to detail, functionality, and aesthetics. The result is a perfect
+                      living space that
+                      expresses the client's personal style.
+                    </p>
+                    <ul class="projects__list">
+                      <li class="projects__item">
+                        100 m<sup>2</sup>
+                      </li>
+                      <li class="projects__item">
+                        2 weeks
+                      </li>
+                      <li class="projects__item">
+                        <span>
+                          young
+                          family
+                        </span>
+                      </li>
+                    </ul>
+                  </div>
+                  <img class="projects__img" src="images/slide.webp" alt="Two-bedroom apartment">
                 </div>
-                <img class="projects__img" src="images/slide.webp" alt="Two-bedroom apartment">
               </div>
             </div>
           </div>
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-button-next"></div>
+          <div class="projects__arrow projects__prev swiper-button-prev"></div>
+          <div class="projects__arrow projects__next swiper-button-next"></div>
         </div>
       </div>
+    </div>
+  </section>
+
+  <section class="rates">
+    <div class="container">
+      <h2 class="sr-only">rates</h2>
+      <ul class="rates__content">
+        <li class="rates__item">
+          <h3 class="rates__title">
+            Tariff Visual
+          </h3>
+          <ul class="rates__list">
+            <li>Design project;</li>
+            <li>3D visualization;</li>
+            <li>Selection of materials, furniture and decor.</li>
+          </ul>
+          <div class="rates__box">
+            <span class="rates__size">
+              50 $ m<sup>2</sup>
+            </span>
+            <button class="rates__btn btn" type="button">
+              Order a colculation
+            </button>
+          </div>
+        </li>
+        <li class="rates__item">
+          <h3 class="rates__title">
+            Tariff 2 All inclusive
+          </h3>
+          <ul class="rates__list">
+            <li>Design project;</li>
+            <li>3D visualization;</li>
+            <li>Selection and ordering of all materials, furniture and decor</li>
+            <li>Selection of a repair team to complete the design project</li>
+            <li>Author's supervision throughout the entire renovation</li>
+            <li>1 year guarantee for repairs of your property</li>
+          </ul>
+          <div class="rates__box">
+            <span class="rates__size">
+              100 $ m<sup>2</sup>
+            </span>
+            <button class="rates__btn btn" type="button">
+              Order a colculation
+            </button>
+          </div>
+        </li>
+      </ul>
     </div>
   </section>
 
